--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,12 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-  <string name="service_name">I SPY YOUR NOTIFICATIONS MWAHAHAH</string>
-  <string name="button_notifications_access_prompt">Give us access</string>
-  <string name="app_name">Bundel</string>
-  <string name="notifications_permission_explanation">In order for the app to work, it requires access to the notifications.</string>
-  <string name="sad_face">😢</string>
-  <string name="notifications_empty_text">Nothing yet…</string>
-  <string name="notification_icon_content_description">Icon</string>
-  <string name="notification_no_icon_content_description">No icon</string>
-  <string name="notification_missing_value">[N/A]</string>
+    <string name="service_name">I SPY YOUR NOTIFICATIONS MWAHAHAH</string>
+    <string name="button_notifications_access_prompt">Give us access</string>
+    <string name="app_name">Bundel</string>
+    <string name="notifications_permission_explanation">In order for the app to work, it requires access to the notifications.</string>
+    <string name="sad_face">😢</string>
+    <string name="notifications_empty_text">Nothing yet…</string>
+    <string name="notification_icon_content_description">Icon</string>
+    <string name="notification_no_icon_content_description">No icon</string>
+    <string name="notification_missing_value">[N/A]</string>
+    <string name="app_icon_content_description">%s icon</string>
 </resources>
