Create history screen [WIP]

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,4 +9,5 @@
     <string name="notification_icon_content_description">Icon</string>
     <string name="notification_no_icon_content_description">No icon</string>
     <string name="app_icon_content_description">%s icon</string>
+    <string name="menu_history">Notifications history</string>
 </resources>
