--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,4 +13,7 @@
     <string name="bottom_nav_history">History</string>
     <string name="onboarding_blurb">Set your working hours, and Bundel will make sure you’re never interrupted — unless it’s really important.\n\nYou can always tell Bundel to let that special someone through.</string>
     <string name="next">Next</string>
+    <string name="onboarding_enable_crashlytics">Enable crash reporting</string>
+    <string name="back">Back</string>
+    <string name="done">Done</string>
 </resources>
