--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -20,4 +20,12 @@
     <string name="notifications_permission_all_done">Thanks, we\'re all set.\nBundel has been granted access to the notifications.</string>
     <string name="onboarding_all_set">Cool, we\'re all set!</string>
     <string name="onboarding_all_set_blurb">Bundel is ready to help you stay focused.</string>
+    <string name="onboarding_schedule_blurb">Set your working hours. Bundel will do the rest to make sure you aren’t interrupted.</string>
+    <string name="day_monday">Mon</string>
+    <string name="day_tuesday">Tue</string>
+    <string name="day_wednesday">Wed</string>
+    <string name="day_thursday">Thu</string>
+    <string name="day_friday">Fri</string>
+    <string name="day_saturday">Sat</string>
+    <string name="day_sunday">Sun</string>
 </resources>
