--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string name="service_name">I SPY YOUR NOTIFICATIONS MWAHAHAH</string>
+    <string name="service_name">Bundel notifications access</string>
     <string name="button_notifications_access_prompt">Give us access</string>
     <string name="app_name">Bundel</string>
     <string name="notifications_permission_explanation">In order for the app to work, it requires access to the notifications.</string>
@@ -17,9 +17,9 @@
     <string name="back">Back</string>
     <string name="done">Done</string>
     <string name="notifications_permission_done_image_content_description">All done</string>
-    <string name="notifications_permission_all_done">Thanks, we\'re all set.\nBundel has been granted access to the notifications.</string>
-    <string name="onboarding_all_set">Cool, we\'re all set!</string>
-    <string name="onboarding_all_set_blurb">Bundel is ready to help you stay focused.</string>
+    <string name="notifications_permission_all_done">Thanks, Bundel has been granted access to the notifications.</string>
+    <string name="onboarding_all_set">All set!</string>
+    <string name="onboarding_all_set_blurb">Bundel is ready to help you stay focused. Dive in!</string>
     <string name="onboarding_schedule_blurb">Set your working hours. Bundel will do the rest to make sure you aren’t interrupted.</string>
     <string name="day_monday">Mon</string>
     <string name="day_tuesday">Tue</string>
