Landscape layout for all other onboarding pages

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -34,4 +34,5 @@
     <string name="onboarding_schedule_blurb_2">For most, these should be your workdays. But you could also use Bundel to make sure you have your “me time” when you’re not working.</string>
     <string name="content_description_time_picker_increase">One more!</string>
     <string name="content_description_time_picker_decrease">One less!</string>
+    <string name="onboarding_all_done_image_description">The floor is misaligned.</string>
 </resources>
