--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -36,4 +36,6 @@
     <string name="content_description_time_picker_decrease">One less!</string>
     <string name="onboarding_all_done_image_description">The floor is misaligned.</string>
     <string name="menu_settings_content_description">Settings</string>
+    <string name="menu_back_content_description">Back</string>
+    <string name="app_filter_item_icon_content_description">Icon for %s</string>
 </resources>
