--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -38,4 +38,5 @@
     <string name="menu_settings_content_description">Settings</string>
     <string name="menu_back_content_description">Back</string>
     <string name="app_filter_item_icon_content_description">Icon for %s</string>
+    <string name="label_excluded">EXCLUDED</string>
 </resources>
