--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -39,4 +39,9 @@
     <string name="menu_back_content_description">Back</string>
     <string name="app_filter_item_icon_content_description">Icon for %s</string>
     <string name="label_excluded">EXCLUDED</string>
+
+    <plurals name="settings_time_ranges_count">
+        <item quantity="one">%d time range</item>
+        <item quantity="other">%d time ranges</item>
+    </plurals>
 </resources>
