Embellish settings further

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -44,6 +44,11 @@
     <string name="settings_time_ranges">Active time ranges</string>
     <string name="settings_exclude_apps">Exclude apps from filtering</string>
     <string name="settings_about">About app</string>
+    <string name="settings_app_version">App version: %s (%s)</string>
+    <string name="settings_about_oss_prefix">"We use open source software: "</string>
+    <string name="settings_about_oss_link">acknowledgements</string>
+    <string name="settings_about_sources_prefix">"This app is open source software: "</string>
+    <string name="settings_about_sources_link">see the sources</string>
 
     <plurals name="settings_time_ranges_count">
         <item quantity="one">%d time range</item>
