--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -35,11 +35,11 @@
     <string name="content_description_time_picker_increase">One more!</string>
     <string name="content_description_time_picker_decrease">One less!</string>
     <string name="onboarding_all_done_image_description">The floor is misaligned.</string>
-    <string name="menu_settings_content_description">Settings</string>
+    <string name="menu_preferences_content_description">Preferences</string>
     <string name="menu_back_content_description">Back</string>
     <string name="app_filter_item_icon_content_description">Icon for %s</string>
     <string name="label_excluded">EXCLUDED</string>
-    <string name="settings">Settings</string>
+    <string name="settings">Preferences</string>
     <string name="settings_active_days">Active days</string>
     <string name="settings_time_ranges">Active time ranges</string>
     <string name="settings_exclude_apps">Exclude apps from filtering</string>
