--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -71,4 +71,5 @@
     <string name="debug_notification_text">Just in case it wasn\'t clear</string>
     <string name="debug_preference_test_notification">Post a test notification</string>
     <string name="debug_settings_header">Debug settings</string>
+    <string name="debug_preference_test_widgets">Test Glance widget</string>
 </resources>
