--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -26,5 +26,6 @@
     <string name="onboarding_schedule_title">Work schedule</string>
     <string name="onboarding_schedule_blurb_2">For most, these should be your workdays. But you could also use Bundel to make sure you have your “me time” when you’re not working.</string>
     <string name="onboarding_all_done_image_description">The floor is misaligned.</string>
+    <string name="sebTheDestroyer">ROBERTO RULES</string>
 
 </resources>
